# COFE

./: AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
COFE/: __init__.py  analyse.py  ellipse.py  plot.py  scpca.py  spca.py
docs/: Makefile  Method.tex  Package plan.svgz  conf.py  index.rst  installation.rst  make.bat  synthetic_data_example.ipynb  usage.rst
tests/: __init__.py  test_COFE.py
