[build-system]
requires = ["setuptools >= 78.0"]
build-backend = "setuptools.build_meta"

[project]
name="COFE"
version="1.2.0"
requires-python = ">= 3.9"
dependencies = [
    "biothings_client>=0.2.6",
    "joblib>=1.2.0", 
    "matplotlib>=3.6.2", 
    "numpy>=1.23.5",
    "pandas>=1.5.2",
    "scipy>=1.10.1", 
    "seaborn>=0.13.2",
    "scikit-learn>=1.2.2", 
    "ipykernel>=6.29.5"
]
authors = [
    {name="Bharath Ananthasubramaniam", email="bharath.ananthasubramaniam@hu-berlin.de"}
]
maintainers = [
    {name="Bharath Ananthasubramaniam", email="bharath.ananthasubramaniam@hu-berlin.de"}
]
description = "The COFE package implements nonlinear dimensionality reduction with a circular constraint on the (dependent) principal components."
readme = "README.rst"
license={file = "LICENSE"}
keywords=["COFE", "clustering", "unsupervised learning"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
include = ["COFE", "COFE.*"]

[project.urls]
repository = "https://github.com/bharathananth/COFE"


